--- a/迴圈.md
+++ b/迴圈.md
@@ -17,3 +17,15 @@ while i<3:
 i+=1   #這裡是在做 i=i+1
 ```
 ### 會變無窮迴圈
+
+```
+i=1
+j=1
+while i<6:
+  while j<6:
+    print (i,end='')
+    j+=1
+  i+=1
+  j=1
+  print()
+```
