--- a/儲存資料.md
+++ b/儲存資料.md
@@ -12,3 +12,27 @@ a = b
 b = c
 print(a,b)
 ```
+##找到的
+https://nkust.gitbook.io/python/untitled
+```
+>>> b = [2, 5, 10, 3, 4, 9]
+>>> sorted(b)
+[2, 3, 4, 5, 9, 10]
+>>> b
+[2, 5, 10, 3, 4, 9]
+>>> b.sort()
+>>> b
+[2, 3, 4, 5, 9, 10]
+>>> b
+[2, 5, 10, 3, 4, 9]
+>>> b.sort()
+>>> b
+[2, 3, 4, 5, 9, 10]
+>>> b.sort(reverse=True)
+>>> b
+[10, 9, 5, 4, 3, 2]
+>>> sorted(b)
+[2, 3, 4, 5, 9, 10]
+>>> sorted(b, reverse=True)
+[10, 9, 5, 4, 3, 2]
+```
